# baruchMFECPP_HW2

./: HWsLevel2Baruch.sln  HWsLevel2Baruch.vcxproj  HWsLevel2Baruch.vcxproj.filters  README.md
exercise1.6.1/: main.cpp
exercise1.6.2/: Defs.h  main.cpp
exercise1.7.1/: main.cpp
exercise1.7.2/: exercise1_7_2.cpp  exercise1_7_2.sln  exercise1_7_2.vcxproj.filters  main.cpp
exercise1.7.3/: exercise1_7_3.cpp  exercise1_7_3.sln  main.cpp
exercise1.7.4/: main.cpp
exercise1.8.1/: main.cpp
exercise1.9.1/: main.cpp
exercise1.9.2/: CMakeLists.txt  main.cpp
exercise1_6_1/: exercise1_6_1.cpp  exercise1_6_1.sln  exercise1_6_1.vcxproj  exercise1_6_1.vcxproj.filters
exercise1_6_2/: exercise1_6_2.cpp  exercise1_6_2.sln  exercise1_6_2.vcxproj  exercise1_6_2.vcxproj.filters
exercise1_7_1/: exercise1_7_1.cpp  exercise1_7_1.sln  exercise1_7_1.vcxproj  exercise1_7_1.vcxproj.filters
exercise1_7_2/: exercise1_7_2.vcxproj
exercise1_7_3/: exercise1_7_3.vcxproj  exercise1_7_3.vcxproj.filters
exercise1_7_4/: exercise1_7_4.cpp  exercise1_7_4.sln  exercise1_7_4.vcxproj  exercise1_7_4.vcxproj.filters
exercise1_8_1/: exercise1_8_1.cpp  exercise1_8_1.sln  exercise1_8_1.vcxproj  exercise1_8_1.vcxproj.filters
exercise1_9_1/: exercise1_9_1.cpp  exercise1_9_1.sln  exercise1_9_1.vcxproj  exercise1_9_1.vcxproj.filters
exercise1_9_2/: exercise1_9_2.cpp  exercise1_9_2.sln  exercise1_9_2.vcxproj  exercise1_9_2.vcxproj.filters
